--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,22 @@
 [package]
 name = "my-powershell"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+description = "My PowerShell"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.4", features = ["derive"] }
 dialoguer = "0.10.4"
 indicatif = "0.17.6"
+rust-embed = "8.0.0"
 serde = { version = "1.0.188", features = ["derive"] }
 toml = "0.8.0"
 
 [dev-dependencies]
 serde = { version = "1.0.188", features = ["derive"] }
+
+[build-dependencies]
+embed-resource = "2.3"
