--- a/resources/my-powershell.toml
+++ b/resources/my-powershell.toml
@@ -1,6 +1,6 @@
 # toml 规范 https://toml.io/cn/v1.0.0
 [workflow]
-name = "my-powershell 增强"
+name = "my-powershell"
 version = "0.0.1"
 author = "ddki"
 description = "基于 Windows Terminal 对 powershell 增强"
@@ -16,10 +16,11 @@ name = "scoop"
 description = "Scoop 是 Windows 下的包管理工具"
 home = "https://scoop.sh/"
 url = "get.scoop.sh"
-install.command = ["scoop_install.ps1"]
-install.args = { "start" = "-", "scoopDir" = "Scoop 的安装目录", "ScoopGlobalDir" = "Scoop 全局 app 的安装目录" }
+installs = [
+    { command = "scoop_install.ps1", args = { "start" = "-", "scoopDir" = "Scoop 的安装目录", "ScoopGlobalDir" = "Scoop 全局 app 的安装目录" } },
+]
 post_command = ["scoop bucket add extras"]
-
+[[workflow.jobs.scoop.install]]
 
 [workflow.jobs.windows_terminal]
 must = true
@@ -27,8 +28,7 @@ sort = 2
 name = "Windows Terminal"
 description = "Windows Terminal"
 home = "https://github.com/microsoft/terminal"
-install.command = ["scoop install windows-terminal"]
-install.args = {}
+installs = [{ command = "scoop install windows-terminal" }]
 
 
 [workflow.jobs.coreutils]
@@ -37,7 +37,7 @@ sort = 3
 name = "coreutils"
 description = "使用rust实现的跨平台GNU coreutils，包含了Linux上的常用命令。"
 home = "https://github.com/uutils/coreutils"
-install.command = ["scoop install uutils-coreutils"]
+installs = [{ command = "scoop install uutils-coreutils" }]
 
 
 [workflow.jobs.oh_my_posh]
@@ -48,8 +48,8 @@ description = "PowerShell 主题"
 home = "https://ohmyposh.dev"
 url = "https://ohmyposh.dev/install.ps1"
 pre_command = ["pwsh"]
-install.command = [
-    "scoop install https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/oh-my-posh.json",
+installs = [
+    { command = "scoop install https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/oh-my-posh.json" },
 ]
 
 
@@ -59,7 +59,7 @@ sort = 5
 name = "Terminal-Icons"
 description = "PowerShell 模块，用于在终端中显示文件和文件夹图标。"
 home = "https://github.com/devblackops/Terminal-Icons"
-install.command = ["scoop install terminal-icons"]
+installs = [{ command = "scoop install terminal-icons" }]
 
 
 [workflow.jobs.pscompletions]
@@ -69,8 +69,8 @@ name = "PSCompletions"
 description = "PowerShell 补全，默认启用 PowerShell 补全（git、scoop）"
 home = "https://github.com/abgox/PSCompletions"
 pre_command = ["pwsh"]
-install.command = [
-    "Install-Module PSCompletions",
-    "echo 'Import-Module PSCompletions' >> $PROFILE",
+installs = [
+    { command = "Install-Module PSCompletions" },
+    { command = "echo 'Import-Module PSCompletions' >> $PROFILE" },
 ]
 post_command = ["psc add git", "psc add scoop"]
