--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dialoguer = "0.10.4"
 indicatif = "0.17.6"
 rust-embed = "8.0.0"
 serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 toml = "0.8.0"
 
 [dev-dependencies]
