--- a/resources/my-powershell.toml
+++ b/resources/my-powershell.toml
@@ -1,76 +1,86 @@
-# toml 规范 https://toml.io/cn/v1.0.0
 [workflow]
 name = "my-powershell"
 version = "0.0.1"
 author = "ddki"
 description = "基于 Windows Terminal 对 powershell 增强"
 repository = ""
-config = ""
 proxy = ""
 
-
-[workflow.jobs.scoop]
-must = true
+[[workflow.jobs]]
 sort = 1
+must = true
 name = "scoop"
 description = "Scoop 是 Windows 下的包管理工具"
-home = "https://scoop.sh/"
 url = "get.scoop.sh"
-installs = [
-    { command = "scoop_install.ps1", args = { "start" = "-", "scoopDir" = "Scoop 的安装目录", "ScoopGlobalDir" = "Scoop 全局 app 的安装目录" } },
-]
-post_command = ["scoop bucket add extras"]
-[[workflow.jobs.scoop.install]]
 
-[workflow.jobs.windows_terminal]
-must = true
+[[workflow.jobs.post_command]]
+command = "scoop bucket add extras"
+
+[[workflow.jobs.installs]]
+command = "scoop_install.ps1"
+
+[workflow.jobs.installs.args]
+ScoopGlobalDir = "Scoop 全局 app 的安装目录"
+scoopDir = "Scoop 的安装目录"
+start = "-"
+
+[[workflow.jobs]]
 sort = 2
+must = true
 name = "Windows Terminal"
 description = "Windows Terminal"
-home = "https://github.com/microsoft/terminal"
-installs = [{ command = "scoop install windows-terminal" }]
 
+[[workflow.jobs.installs]]
+command = "scoop install windows-terminal"
 
-[workflow.jobs.coreutils]
-must = false
+[[workflow.jobs]]
 sort = 3
+must = false
 name = "coreutils"
 description = "使用rust实现的跨平台GNU coreutils，包含了Linux上的常用命令。"
-home = "https://github.com/uutils/coreutils"
-installs = [{ command = "scoop install uutils-coreutils" }]
 
+[[workflow.jobs.installs]]
+command = "scoop install uutils-coreutils"
 
-[workflow.jobs.oh_my_posh]
-must = false
+[[workflow.jobs]]
 sort = 4
+must = false
 name = "oh-my-posh"
 description = "PowerShell 主题"
-home = "https://ohmyposh.dev"
 url = "https://ohmyposh.dev/install.ps1"
-pre_command = ["pwsh"]
-installs = [
-    { command = "scoop install https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/oh-my-posh.json" },
-]
 
+[[workflow.jobs.pre_command]]
+command = "pwsh"
 
-[workflow.jobs.terminal_icons]
-must = false
+[[workflow.jobs.installs]]
+command = "scoop install https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/oh-my-posh.json"
+
+[[workflow.jobs]]
 sort = 5
+must = false
 name = "Terminal-Icons"
 description = "PowerShell 模块，用于在终端中显示文件和文件夹图标。"
-home = "https://github.com/devblackops/Terminal-Icons"
-installs = [{ command = "scoop install terminal-icons" }]
 
+[[workflow.jobs.installs]]
+command = "scoop install terminal-icons"
 
-[workflow.jobs.pscompletions]
-must = false
+[[workflow.jobs]]
 sort = 6
+must = false
 name = "PSCompletions"
 description = "PowerShell 补全，默认启用 PowerShell 补全（git、scoop）"
-home = "https://github.com/abgox/PSCompletions"
-pre_command = ["pwsh"]
-installs = [
-    { command = "Install-Module PSCompletions" },
-    { command = "echo 'Import-Module PSCompletions' >> $PROFILE" },
-]
-post_command = ["psc add git", "psc add scoop"]
+
+[[workflow.jobs.pre_command]]
+command = "pwsh"
+
+[[workflow.jobs.post_command]]
+command = "psc add git"
+
+[[workflow.jobs.post_command]]
+command = "psc add scoop"
+
+[[workflow.jobs.installs]]
+command = "Install-Module PSCompletions"
+
+[[workflow.jobs.installs]]
+command = "echo 'Import-Module PSCompletions' >> $PROFILE"
